スマートフォンでホームを閲覧すると正常に表示がされない部分を修正

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                 <div class="main-content">
                     <article class="content-block">
                         <h3 class="content-title">研究室紹介</h3>
+                        <div class="video-container">
                         <iframe width="515" height="270" src="https://www.youtube.com/embed/VWLxVF2bb70?si=TaH3Cah87-5Ypgb8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
                     </article>
                 </div>
                 <aside class="sidebar">
