--- a/achievements.html
+++ b/achievements.html
@@ -49,10 +49,10 @@
                     <article class="content-block">
                         <h3 class="content-title">研究発表</h3>
                         <ul class="achievements-list">
+                            <li>Kanematsu Yoshiki, Fujiwara Masahiro, "Estimation of Lesion Locations Using Ultrasonic Propagation Measurement of Body Sound Sources," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.25, A-2, Tokyo, Nov. 2025.</li>
+                            <li>Mano Takeru, Fujiwara Masahiro, "Consideration of acoustic levitation techniques using ultrasonic Laguerre-Gaussian beams," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.39, A-30, Tokyo, Nov. 2025.</li>
+                            <li>Yuya Ishibashi, Fujiwara Masahiro, "Localization of small obstacles using surface ultrasound wave and beam forming sensing," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.55, B-30, Tokyo, Nov. 2025.</li>
                             <li>玉串潤,藤原正浩, “周期的櫛形構造をもつ超音波表面導波路の応答計測,” 第42回センシングフォーラム, pp212-217, 1C3-3, 群馬, 09/25-09/26, 2025.</li>
-                            <!--
-                            <li>（例）山田 太郎, "〇〇の△△に関する研究", XX学会論文誌, Vol. 1, No. 2, pp. 10-20, 2025.</li>
-                            -->
                         </ul>
                     </article>
                     <!--
