--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                     <div class="content-block">
                         <h3 class="content-title">2025年トピックス</h3>
                         <ul class="news-summary-list">
-                            <li><span class="date">2025.09.25-26</span><a href="news.html">修士1年の玉串潤さんが、第42回センシングフォーラム　計測部門大会にて発表しました。</a></li>
+                            <li><span class="date">2025.11.15</span><a href="news.html">修士1年の眞野健さん、石橋侑也さん、兼松祥己さんが、The 22nd IEEE TOWERSにて発表しました。</a></li>
+                            <li><span class="date">2025.09.25-26</span><a href="news.html">修士1年の玉串潤さんが、第42回センシングフォーラム 計測部門大会にて発表しました。</a></li>
                             <li><span class="date">2025.08.01</span><a href="news.html">修士1年の眞野健さんが、第二級陸上無線技術士に合格しました。</a></li>
                         </ul>
                         <div class="text-right">
