--- a/news.html
+++ b/news.html
@@ -56,8 +56,12 @@
                     -->
                     <h3 class="group-title"> 2025年</h3>
                     <div class="news-item">
+                        <p class="date">2025.11.15</p>
+                        <h3 class="title">修士1年の眞野健さん、石橋侑也さん、兼松祥己さんが、The 22nd IEEE TOWERSにて発表しました。</h3>
+                    </div>
+                    <div class="news-item">
                         <p class="date">2025.09.25-26</p>
-                        <h3 class="title">修士1年の玉串潤さんが、第42回センシングフォーラム　計測部門大会にて発表しました。</h3>
+                        <h3 class="title">修士1年の玉串潤さんが、第42回センシングフォーラム 計測部門大会にて発表しました。</h3>
                     </div>
                     <div class="news-item">
                         <p class="date">2025.08.01</p>
