--- a/news.html
+++ b/news.html
@@ -58,6 +58,12 @@
                     <div class="news-item">
                         <p class="date">2025.11.15</p>
                         <h3 class="title">修士1年の眞野健さん、石橋侑也さん、兼松祥己さんが、The 22nd IEEE TOWERSにて発表しました。</h3>
+                        <!--
+                        <div class="news-images">
+                            <img src="img/" alt="">
+                            <img src="img/" alt="">
+                        </div>
+                        -->
                     </div>
                     <div class="news-item">
                         <p class="date">2025.09.25-26</p>
