--- a/achievements.html
+++ b/achievements.html
@@ -53,6 +53,9 @@
                             <li>Mano Takeru, Fujiwara Masahiro, "Consideration of acoustic levitation techniques using ultrasonic Laguerre-Gaussian beams," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.39, A-30, Tokyo, Nov. 2025.</li>
                             <li>Yuya Ishibashi, Fujiwara Masahiro, "Localization of small obstacles using surface ultrasound wave and beam forming sensing," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.55, B-30, Tokyo, Nov. 2025.</li>
                             <li>玉串潤,藤原正浩, “周期的櫛形構造をもつ超音波表面導波路の応答計測,” 第42回センシングフォーラム, pp212-217, 1C3-3, 群馬, 09/25-09/26, 2025.</li>
+                            <!--
+                            <li>（例）山田 太郎, "〇〇の△△に関する研究", XX学会論文誌, Vol. 1, No. 2, pp. 10-20, 2025.</li>
+                            -->
                         </ul>
                     </article>
                     <!--
@@ -64,15 +67,17 @@
                         </ul>
                     </article>
                     -->
+                    <!--
                     <article class="content-block">
                         <h3 class="content-title">受賞</h3>
                         <ul class="achievements-list">
-                            <!--
+                            
                             <li>受賞者名, "受賞名", 受賞年月日.</li>
                             <li>（例）佐藤 花子, "XX学会 優秀ポスター発表賞", 2025年7月20日.</li>
-                            -->
+                            
                         </ul>
                     </article>
+                -->
                 </div>
             </div>
         </section>
