--- a/news.html
+++ b/news.html
@@ -57,6 +57,10 @@
                     <h3 class="group-title"> 2025年</h3>
                     <div class="news-item">
                         <p class="date">2025.11.15</p>
+                        <h3 class="title">修士1年の石橋侑也さんが、22nd IEEE TOWERS のグルーブワークイベントで TOWERS Mobility UIUX Award を受賞しました。</h3>
+                    </div>
+                    <div class="news-item">
+                        <p class="date">2025.11.15</p>
                         <h3 class="title">修士1年の眞野健さん、石橋侑也さん、兼松祥己さんが、The 22nd IEEE TOWERSにて発表しました。</h3>
                         <!--
                         <div class="news-images">
