--- a/achievements.html
+++ b/achievements.html
@@ -49,6 +49,7 @@
                     <article class="content-block">
                         <h3 class="content-title">研究発表</h3>
                         <ul class="achievements-list">
+                            <li>玉串潤, 藤原正浩, “超音波表面導波路の散乱波計測,” 第30回パターン計測シンポジウム, 東京, 11/21, 2025.</li>
                             <li>Kanematsu Yoshiki, Fujiwara Masahiro, "Estimation of Lesion Locations Using Ultrasonic Propagation Measurement of Body Sound Sources," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.25, A-2, Tokyo, Nov. 2025.</li>
                             <li>Mano Takeru, Fujiwara Masahiro, "Consideration of acoustic levitation techniques using ultrasonic Laguerre-Gaussian beams," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.39, A-30, Tokyo, Nov. 2025.</li>
                             <li>Yuya Ishibashi, Fujiwara Masahiro, "Localization of small obstacles using surface ultrasound wave and beam forming sensing," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.55, B-30, Tokyo, Nov. 2025.</li>
