--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                     <div class="content-block">
                         <h3 class="content-title">2025年トピックス</h3>
                         <ul class="news-summary-list">
+                            <li><span class="date">2025.11.21</span><a href="news.html">修士1年の玉串潤さんが、第30回パターン計測シンポジウムにて発表しました。</a></li>
                             <li><span class="date">2025.11.15</span><a href="news.html">修士1年の石橋侑也さんが、22nd IEEE TOWERS のグルーブワークイベントで TOWERS Mobility UIUX Award を受賞しました。</a></li>
                             <li><span class="date">2025.11.15</span><a href="news.html">修士1年の眞野健さん、石橋侑也さん、兼松祥己さんが、The 22nd IEEE TOWERSにて発表しました。</a></li>
                             <li><span class="date">2025.09.25-26</span><a href="news.html">修士1年の玉串潤さんが、第42回センシングフォーラム 計測部門大会にて発表しました。</a></li>
