--- a/news.html
+++ b/news.html
@@ -56,6 +56,10 @@
                     -->
                     <h3 class="group-title"> 2025年</h3>
                     <div class="news-item">
+                        <p class="date">2025.12.10-12</p>
+                        <h3 class="title">修士1年の青山晃平さん、稲吉陸仁さん、石橋侑也さん、兼松祥己さん、眞野健さんが、第26回計測自動制御学会システムインテグレーション部門講演会にて発表しました。</h3>
+                    </div>
+                    <div class="news-item">
                         <p class="date">2025.11.21</p>
                         <h3 class="title">修士1年の玉串潤さんが、第30回パターン計測シンポジウムにて発表しました。</h3>
                     </div>
