--- a/achievements.html
+++ b/achievements.html
@@ -49,6 +49,10 @@
                     <article class="content-block">
                         <h3 class="content-title">研究発表</h3>
                         <ul class="achievements-list">
+                            <li>兼松祥己，藤原正浩，”体内音源の超音波伝搬計測を利用した病変箇所の推定”，第26回計測自動制御学会システムインテグレーション部門講演会，3E4-14，広島，Dec.10-12，2025.</li>
+                            <li>稲吉陸仁，藤原正浩，”集束超音波による繊維付着物の非接触除去特性の評価”，第26回計測自動制御学会システムインテグレーション部門講演会，3E1-21，広島，Dec.10-12，2025.</li>
+                            <li>石橋侑也，藤原正浩，”アレイ信号処理による表面音響導波路上の小型障害物の測位”，第26回計測自動制御学会システムインテグレーション部門講演会，1B8-08，広島，Dec.10-12，2025.</li>
+                            <li>青山晃平，藤原正浩，”集束超音波を用いた発泡スチロールの非接触加工法の基礎検討”，第26回計測自動制御学会システムインテグレーション部門講演会，1E5-05，広島，Dec.10-12，2025.</li>
                             <li>眞野健，藤原正浩，”超音波ラゲールガウシアンビームによる音響浮揚の検討と評価”，第26回計測自動制御学会システムインテグレーション部門講演会，1E1-16，広島，Dec.10-12，2025.</li>
                             <li>玉串潤, 藤原正浩, “超音波表面導波路の散乱波計測,” 第30回パターン計測シンポジウム, 東京, 11/21, 2025.</li>
                             <li>Kanematsu Yoshiki, Fujiwara Masahiro, "Estimation of Lesion Locations Using Ultrasonic Propagation Measurement of Body Sound Sources," Proceedings of the 22nd IEEE Transdisciplinary-Oriented Workshop for Emerging Researchers, p.25, A-2, Tokyo, Nov. 2025.</li>
