--- a/news.html
+++ b/news.html
@@ -69,6 +69,10 @@
                     </div>
                     <div class="news-item">
                         <p class="date">2025.11.15</p>
+                        <h3 class="title">修士１年の石橋侑也さん，眞野健さん，兼松祥己さん，学部4年の瀬川優斗さんにIEEE東京支部より感謝状が授与されました．</h3>
+                    </div>
+                    <div class="news-item">
+                        <p class="date">2025.11.15</p>
                         <h3 class="title">修士1年の眞野健さん、石橋侑也さん、兼松祥己さんが、The 22nd IEEE TOWERSにて発表しました。</h3>
                         <!--
                         <div class="news-images">
